Bug 156712 Webclient can't do File->New Window on Unix r=edburns